--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,9 @@
     </header>
     <nav>
         <ul>
-           .html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="projects.html">Projects</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section>
