--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
         <h2>GIS & Geospatial Intelligence</h2>
         <p>Emergency response mapping, LiDAR analysis, real property inventory.</p>
 
-        Science & Analytics</h2>
+        <h2>Data Science & Analytics</h2>
         <p>Wildfire response modeling, data pipelines, dashboards (Power BI, R, Python).</p>
 
         <h2>Generative AI</h2>
