--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         <h1>Samy Bouma Ngock, MSc., GISP</h1>
         <p>Versatile GIS Professional with over 20 years of experience leveraging geospatial and information technology to drive strategic decision-making, optimize operations, and foster transformative change.</p>
     </header>
-   >
+    <nav>
+        <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
