--- a/contact.html
+++ b/contact.html
@@ -19,8 +19,8 @@
     </nav>
     <section>
         <p>Email: <a href="mailto:samybouma@hotmail.com">samybouma@hotmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/samybouma">linkedin.com/in/samybouma</a></p>
-        <p>GitHub: <a href="https://github.com/samybouma">github.com/samybouma</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/samyboumangock">Samy Bouma Ngock</a></p>
+        <p>GitHub: <a href="https://github.com/sabank">sabank</a></p>
     </section>
     <footer>
         <p>&copy; 2025 Samy Bouma Ngock</p>
