--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2>About Me</h2>
         <p>I hold a Master of Science in Geography and a Specialized Postgraduate Diploma in Geographic Information Systems from Université du Québec à Montréal. My academic foundation is complemented by continuous professional development, including certifications in Generative AI, Machine Learning, and Data Engineering from institutions such as IBM, Google Cloud, and Johns Hopkins University.</p>
         <p>Throughout my career, I have served in various capacities across government, defence, and international organizations. My roles have included GIS Analyst at the Canadian Food Inspection Agency, GIS Technician with the Department of National Defence, and GIS Specialist for the United Nations Peacekeeping Operations. I have led initiatives involving emergency response mapping, LiDAR analysis, real property inventory, and AI-driven data solutions. My work consistently supports strategic decision-making and aligns with national digital transformation goals.</p>
-        <a href="2025_CV_SBN.pdf" download>Download Resume</a>
+        <a href="/assets/attachments/2025_CV_SBN.pdf" download>Download Resume</a>
     </section>
     <footer>
         <p>&copy; 2025 Samy Bouma Ngock</p>
