--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/projects.html">Projects</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/portfolio/index.html">Home</a></li>
+            <li><a href="/portfolio/projects.html">Projects</a></li>
+            <li><a href="/portfolio/contact.html">Contact</a></li>
         </ul>
     </nav>
     <section>
