--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Samy Bouma Ngock</title>
-    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/portfolio/assets/css/styles.css">
 </head>
 <body>
     <header>
@@ -12,9 +12,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/projects.html">Projects</a></li>
-            <li><a href="/contact.html">Contact</a></li>
+            <li><a href="/portfolio/index.html">Home</a></li>
+            <li><a href="/portfolio/projects.html">Projects</a></li>
+            <li><a href="/portfolio/contact.html">Contact</a></li>
         </ul>
     </nav>
     <section>
