--- a/index.html
+++ b/index.html
@@ -1,31 +1,173 @@
 <!DOCTYPE html>
+<!--
+	Read Only by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Samy Bouma Ngock - Portfolio</title>
-    <link rel="stylesheet" href="/portfolio/assets/css/styles.css">
-</head>
-<body>
-    <header>
-        <h1>Samy Bouma Ngock, MSc., GISP</h1>
-        <p>Versatile GIS Professional with over 20 years of experience leveraging geospatial and information technology to drive strategic decision-making, optimize operations, and foster transformative change.</p>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="/portfolio/index.html">Home</a></li>
-            <li><a href="/portfolio/projects.html">Projects</a></li>
-            <li><a href="/portfolio/contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <section>
-        <h2>About Me</h2>
-        <p>I hold a Master of Science in Geography and a Specialized Postgraduate Diploma in Geographic Information Systems from Université du Québec à Montréal. My academic foundation is complemented by continuous professional development, including certifications in Generative AI, Machine Learning, and Data Engineering from institutions such as IBM, Google Cloud, and Johns Hopkins University.</p>
-        <p>Throughout my career, I have served in various capacities across government, defence, and international organizations. My roles have included GIS Analyst at the Canadian Food Inspection Agency, GIS Technician with the Department of National Defence, and GIS Specialist for the United Nations Peacekeeping Operations. I have led initiatives involving emergency response mapping, LiDAR analysis, real property inventory, and AI-driven data solutions. My work consistently supports strategic decision-making and aligns with national digital transformation goals.</p>
-        <a href="/portfolio/attachments/2025_CV_SBN.pdf" download>Download Resume</a>
-    </section>
-    <footer>
-        <p>&copy; 2025 Samy Bouma Ngock</p>
-    </footer>
-</body>
+    <!-- Head -->
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Sabank-Portfolio</title>
+        <link rel="stylesheet" href="/portfolio/assets/css/main.css">
+    </head> <!-- End Head -->
+
+    <!-- Body -->
+    <body class="is-preload">
+		<!-- Scripts -->
+        <script src="assets/js/jquery.min.js"></script>
+        <script src="assets/js/jquery.scrollex.min.js"></script>
+        <script src="assets/js/jquery.scrolly.min.js"></script>
+        <script src="assets/js/browser.min.js"></script>
+        <script src="assets/js/breakpoints.min.js"></script>
+        <script src="assets/js/util.js"></script>
+        <script src="assets/js/main.js"></script>
+
+        <!-- Header -->
+        <section id="header">
+            <header>
+                <span class="image avatar"><img src="/portfolio/images/avatar.jpg" alt="" /></span>
+                <h1 id="logo"><a href="#">Samy Bouma Ngock</a></h1>
+                <p>Versatile GIS Professional with over 20 years of experience<br />
+                   leveraging geospatial and information technology<br />
+                   to drive strategic decision-making, optimize operations,<br />
+                   and foster transformative change.</p>
+            </header>
+            
+            <nav id="nav">
+                <ul>
+                    <li><a href="#one" class="active">About</a></li>
+                    <li><a href="#two">Things I Can Do</a></li>
+                    <li><a href="#three">A Few Accomplishments</a></li>
+                    <li><a href="#four">Contact</a></li>
+                </ul>
+            </nav>
+            
+            <footer>
+                <ul class="icons">
+                    <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+                    <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+                    <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+                    <li><a href="https://www.linkedin.com/in/samyboumangock" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+                    <li><a href="https://github.com/sabank" class="icon brands fa-github"><span class="label">Github</span></a></li>
+                    <li><a href="mailto:samybouma@hotmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+                </ul>
+            </footer>
+        </section> <!-- End Header -->
+
+		<!-- Wrapper -->
+		<div id="wrapper">
+            <!-- Main -->
+            <div id="main">
+                <!-- One -->
+                <section id="one">
+                    <div class="image main" data-position="center">
+                        <img src="images/banner.jpg" alt="" />
+                    </div>
+                    <div class="container">
+                        <header class="major">
+                            <h2>Read Only</h2>
+                            <p>Just an incredibly simple responsive site<br />
+                            template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+                        </header>
+                        <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+                    </div>
+                </section> <!-- End One -->
+
+                <!-- Two -->
+                <section id="two">
+                    <div class="container">
+                        <h3>Things I Can Do</h3>
+                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+                        <ul class="feature-icons">
+                            <li class="icon solid fa-code">Write all the code</li>
+                            <li class="icon solid fa-cubes">Stack small boxes</li>
+                            <li class="icon solid fa-book">Read books and stuff</li>
+                            <li class="icon solid fa-coffee">Drink much coffee</li>
+                            <li class="icon solid fa-bolt">Lightning bolt</li>
+                            <li class="icon solid fa-users">Shadow clone technique</li>
+                        </ul>
+                    </div>
+                </section> <!-- End Two -->
+
+                <!-- Three -->
+                <section id="three">
+                    <div class="container">
+                        <h3>A Few Accomplishments</h3>
+                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+                        <div class="features">
+                            <article>
+                                <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                                <div class="inner">
+                                    <h4>Possibly broke spacetime</h4>
+                                    <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                                </div>
+                            </article>
+                            <article>
+                                <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                                <div class="inner">
+                                    <h4>Terraformed a small moon</h4>
+                                    <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                                </div>
+                            </article>
+                            <article>
+                                <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                                <div class="inner">
+                                    <h4>Snapped dark matter in the wild</h4>
+                                    <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </section> <!-- End Three -->
+
+                <!-- Four -->
+                <section id="four">
+                    <div class="container">
+                        <h3>Contact Me</h3>
+                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+                        <form method="post" action="#">
+                            <div class="row gtr-uniform">
+                                <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
+                                <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+                                <div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
+                                <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+                                <div class="col-12">
+                                    <ul class="actions">
+                                        <li><input type="submit" class="primary" value="Send Message" /></li>
+                                        <li><input type="reset" value="Reset Form" /></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </section> <!-- End Four -->
+			</div> <!-- End Main -->
+
+            <!-- Sidebar -->
+            <section id="sidebar">
+                <div class="inner">
+                    <nav>
+                        <ul class="links">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#one">About</a></li>
+                            <li><a href="#two">Things I Can Do</a></li>
+                            <li><a href="#three">A Few Accomplishments</a></li>
+                            <li><a href="#four">Contact</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </section> <!-- End Sidebar -->
+
+            <!-- Footer -->
+            <section id="footer">
+                <div class="container">
+                    <ul class="copyright">
+                        <li>&copy; 2025 Samy Bouma Ngock. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+                    </ul>
+                </div>
+            </section> <!-- End Footer -->
+        </div> <!-- End Wrapper -->
+    </body> <!-- End Body -->
 </html>
