--- a/index.html
+++ b/index.html
@@ -29,10 +29,8 @@
             <header>
                 <span class="image avatar"><img src="/portfolio/images/avatar.jpg" alt="" /></span>
                 <h1 id="logo"><a href="#">Samy Bouma Ngock</a></h1>
-                <p>Versatile GIS Professional with over 20 years of experience<br />
-                   leveraging geospatial and information technology<br />
-                   to drive strategic decision-making, optimize operations,<br />
-                   and foster transformative change.</p>
+                <p>I drive digital transformation<br />
+                   through geospatial and IT innovation</p>
             </header>
             
             <nav id="nav">
