--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <header>
                 <span class="image avatar"><img src="/portfolio/images/avatar.jpg" alt="" /></span>
                 <h1 id="logo"><a href="#">Samy Bouma Ngock</a></h1>
-                <p>I drive digital transformation<br />
+                <p>Digital craftsman of Geographic Intelligence<br />
                    through geospatial and IT innovation</p>
             </header>
             
