update header description for clarity and conciseness

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
             <header>
                 <span class="image avatar"><img src="/portfolio/images/avatar.jpg" alt="" /></span>
                 <h1 id="logo"><a href="#">Samy Bouma Ngock</a></h1>
-                <p>Digital craftsman of Geographic Intelligence<br />
-                   through geospatial and IT innovation</p>
+                <p>Digital craftsman of Geographic Intelligence</p>
             </header>
             
             <nav id="nav">
