update border and background colors for consistency and improved aesthetics; revise header text for clarity

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <header>
                 <span class="image avatar"><img src="/portfolio/images/avatar.jpg" alt="" /></span>
                 <h1 id="logo"><a href="#">Samy Bouma Ngock</a></h1>
-                <p>Digital craftsman of Geographic Intelligence</p>
+                <p>AI-tuned and geo-optimized</p>
             </header>
             
             <nav id="nav">
@@ -65,10 +65,9 @@
                     <div class="container">
                         <header class="major">
                             <h2>Read Only</h2>
-                            <p>Just an incredibly simple responsive site<br />
-                            template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+                            <p>Digital craftsman of Geographic Intelligence.</p>
                         </header>
-                        <p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+                        <p>Welcome to my professional portfolio showcasing my work in GIS, Data Science, and Generative AI. This portfolio highlights my projects, skills, and experience in leveraging geospatial technologies, data-driven decision support, and AI-powered solutions.</p>
                     </div>
                 </section> <!-- End One -->
 
