update image paths in index.html for correct referencing and replace banner.jpg with banner.jpeg

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <!-- Body -->
     <body class="is-preload">
 		<!-- Scripts -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/jquery.scrollex.min.js"></script>
-        <script src="assets/js/jquery.scrolly.min.js"></script>
-        <script src="assets/js/browser.min.js"></script>
-        <script src="assets/js/breakpoints.min.js"></script>
-        <script src="assets/js/util.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="/portfolio/assets/js/jquery.min.js"></script>
+        <script src="/portfolio/assets/js/jquery.scrollex.min.js"></script>
+        <script src="/portfolio/assets/js/jquery.scrolly.min.js"></script>
+        <script src="/portfolio/assets/js/browser.min.js"></script>
+        <script src="/portfolio/assets/js/breakpoints.min.js"></script>
+        <script src="/portfolio/assets/js/util.js"></script>
+        <script src="/portfolio/assets/js/main.js"></script>
 
         <!-- Header -->
         <section id="header">
@@ -60,7 +60,7 @@
                 <!-- One -->
                 <section id="one">
                     <div class="image main" data-position="center">
-                        <img src="images/banner.jpg" alt="" />
+                        <img src="/portfolio/images/banner.jpeg" alt="" />
                     </div>
                     <div class="container">
                         <header class="major">
@@ -94,21 +94,21 @@
                         <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
                         <div class="features">
                             <article>
-                                <a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+                                <a href="#" class="image"><img src="/portfolio/images/pic01.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h4>Possibly broke spacetime</h4>
                                     <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
                                 </div>
                             </article>
                             <article>
-                                <a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+                                <a href="#" class="image"><img src="/portfolio/images/pic02.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h4>Terraformed a small moon</h4>
                                     <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
                                 </div>
                             </article>
                             <article>
-                                <a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+                                <a href="#" class="image"><img src="/portfolio/images/pic03.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h4>Snapped dark matter in the wild</h4>
                                     <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
