update Twitter icon class to use 'fa-x-twitter' branding

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             
             <footer>
                 <ul class="icons">
-                    <li><a href="#" class="icon brands fa-square-x-twitter"><span class="label">X (Twitter)</span></a></li>
+                    <li><a href="#" class="icon brands fa-x-twitter"><span class="label">X (Twitter)</span></a></li>
                     <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
                     <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
                     <li><a href="https://www.linkedin.com/in/samyboumangock" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
