add Musical Birthday Quest accomplishment with image and description

--- a/index.html
+++ b/index.html
@@ -93,27 +93,34 @@
                         <h3>A Few Accomplishments</h3>
                         <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
                         <div class="features">
+                            <!-- Musical Birthday Quest accomplishment -->
                             <article>
-                                <a href="#" class="image"><img src="/portfolio/images/pic01.jpg" alt="" /></a>
+                                <a href="https://github.com/sabank/MusicalBirthdayQuest" class="image" target="_blank">
+                                    <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" />
+                                </a>
                                 <div class="inner">
-                                    <h4>Possibly broke spacetime</h4>
-                                    <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                                    <h4>Musical Birthday Quest</h4>
+                                    <p>Created an interactive web app that generates a personalized playlist based on your birthday and musical preferences. Integrates music APIs and delivers a fun, shareable experience.</p>
                                 </div>
-                            </article>
+                            </article> <!-- End Musical Birthday Quest -->
+                            
+                            <!-- Terraformed a small moon accomplishments -->
                             <article>
                                 <a href="#" class="image"><img src="/portfolio/images/pic02.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h4>Terraformed a small moon</h4>
                                     <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
                                 </div>
-                            </article>
+                            </article> <!-- End Terraformed a small moon -->
+                            
+                            <!-- Snapped dark matter in the wild accomplishment -->
                             <article>
                                 <a href="#" class="image"><img src="/portfolio/images/pic03.jpg" alt="" /></a>
                                 <div class="inner">
                                     <h4>Snapped dark matter in the wild</h4>
                                     <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
                                 </div>
-                            </article>
+                            </article> <!-- End Snapped dark matter in the wild -->
                         </div>
                     </div>
                 </section> <!-- End Three -->
