update description of Musical Birthday Quest to reflect new interactive gameplay

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 </a>
                                 <div class="inner">
                                     <h4>Musical Birthday Quest</h4>
-                                    <p>Created an interactive web app that generates a personalized playlist based on your birthday and musical preferences. Integrates music APIs and delivers a fun, shareable experience.</p>
+                                    <p>Developed a puzzle-like web app where users answer three music-related questions correctly to reveal a hidden birthday message. Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                 </div>
                             </article> <!-- End Musical Birthday Quest -->
                             
