--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 </a>
                                 <div class="inner">
                                     <h4>Musical Birthday Quest</h4>
-                                    <p>Developed a puzzle-like web app where users answer three music-related questions correctly to reveal a hidden birthday message. Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
+                                    <p>Created an interactive web app that generates music-related questions. When the user answers 3 questions correctly, the hidden birthday message is revealed. Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                 </div>
                             </article> <!-- End Musical Birthday Quest -->
                             
