update Musical Birthday Quest link to point to the live site and enhance the title with a hyperlink

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
                         <div class="features">
                             <!-- Musical Birthday Quest accomplishment -->
                             <article>
-                                <a href="https://github.com/sabank/MusicalBirthdayQuest" class="image" target="_blank">
+                                <a href="https://sabank.github.io/MusicalBirthdayQuest/" class="image" target="_blank">
                                     <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" />
                                 </a>
                                 <div class="inner">
-                                    <h4>Musical Birthday Quest</h4>
+                                    <h4><a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a></h4>
                                     <p>Created an interactive web app that generates music-related questions. When the user answers 3 questions correctly, the hidden birthday message is revealed. Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                 </div>
                             </article> <!-- End Musical Birthday Quest -->
