--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <section id="three">
                     <div class="container">
                         <h3>A Few Accomplishments</h3>
-                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+                        <p>Here are a few highlights from my journey in GIS, Data Science, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
                         <div class="features">
                             <!-- Musical Birthday Quest accomplishment -->
                             <article>
