update Musical Birthday Quest description to enhance clarity and add GitHub repository link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                 </a>
                                 <div class="inner">
                                     <h4><a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a></h4>
-                                    <p>Created an interactive web app that generates music-related questions. When the user answers 3 questions correctly, the hidden birthday message is revealed. Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
+                                    <p>Combines interactive gameplay with music knowledge for a unique and engaging experience. <a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub Repo</a></p>
                                 </div>
                             </article> <!-- End Musical Birthday Quest -->
                             
