add video demonstration for ArcGIS Picture Marker Symbol accomplishment

--- a/index.html
+++ b/index.html
@@ -104,14 +104,18 @@
                                 </div>
                             </article> <!-- End Musical Birthday Quest -->
                             
-                            <!-- Terraformed a small moon accomplishments -->
+                            <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
-                                <a href="#" class="image"><img src="/portfolio/images/pic02.jpg" alt="" /></a>
+                                <a href="#" class="image" target="_blank">
+                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" alt="ArcGIS Picture Marker Symbol" controls style="width:100%;height:auto;">
+                                        Your browser does not support the video tag.
+                                    </video>
+                                </a>
                                 <div class="inner">
-                                    <h4>Terraformed a small moon</h4>
-                                    <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+                                    <h4>ArcGIS Picture Marker Symbol</a></h4>
+                                    <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro. <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a></p>
                                 </div>
-                            </article> <!-- End Terraformed a small moon -->
+                            </article> <!-- End ArcGIS Picture Marker Symbol -->
                             
                             <!-- Snapped dark matter in the wild accomplishment -->
                             <article>
