update Musical Birthday Quest description for consistency and enhance video link accessibility

--- a/index.html
+++ b/index.html
@@ -100,14 +100,14 @@
                                 </a>
                                 <div class="inner">
                                     <h4><a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a></h4>
-                                    <p>Combines interactive gameplay with music knowledge for a unique and engaging experience. <a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub Repo</a></p>
+                                    <p>Combines interactive gameplay with music knowledge for a unique and engaging experience. <a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub repo</a></p>
                                 </div>
                             </article> <!-- End Musical Birthday Quest -->
                             
                             <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
-                                <a href="#" class="image" target="_blank">
-                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" alt="ArcGIS Picture Marker Symbol" controls style="width:100%;height:auto;">
+                                <a href="#" class="image" target="_blank" title="ArcGIS Picture Marker Symbol video">
+                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" alt="ArcGIS Picture Marker Symbol" controls class="video-responsive">
                                         Your browser does not support the video tag.
                                     </video>
                                 </a>
