enhance video element for ArcGIS Picture Marker Symbol with responsive dimensions

--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
                             <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
                                 <a href="#" class="image" target="_blank" title="ArcGIS Picture Marker Symbol video">
-                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" alt="ArcGIS Picture Marker Symbol" controls class="video-responsive">
+                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" alt="ArcGIS Picture Marker Symbol"
+                                        controls class="video-responsive" width="937" height="621"
+                                        style="max-width:100%;height:auto;display:block;">
                                         Your browser does not support the video tag.
                                     </video>
                                 </a>
