--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
                                 </a>
                                 <div class="inner">
                                     <h4><a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a></h4>
-                                    <p>Combines interactive gameplay with music knowledge for a unique and engaging experience. <a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub repo</a></p>
+                                    <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
+                                    <p><a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub repo</a></p>
                                 </div>
                             </article> <!-- End Musical Birthday Quest -->
                             
