improve accessibility and structure for Musical Birthday Quest and ArcGIS Picture Marker Symbol sections

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                         <div class="features">
                             <!-- Musical Birthday Quest accomplishment -->
                             <article>
-                                <a href="https://sabank.github.io/MusicalBirthdayQuest/" class="image" target="_blank">
-                                    <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest" />
+                                <a href="https://sabank.github.io/MusicalBirthdayQuest/" class="image" target="_blank" title="Click Me">
+                                    <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest"/>
                                 </a>
                                 <div class="inner">
                                     <h4><a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a></h4>
@@ -107,16 +107,17 @@
                             
                             <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
-                                <a href="#" class="image" target="_blank" title="ArcGIS Picture Marker Symbol video">
-                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" alt="ArcGIS Picture Marker Symbol"
+                                <a href="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" target="_blank" title="ArcGIS Picture Marker Symbol video" style="display:block;">
+                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4"
+                                        alt="ArcGIS Picture Marker Symbol"
                                         controls class="video-responsive" width="937" height="621"
-                                        style="max-width:100%;height:auto;display:block;">
-                                        Your browser does not support the video tag.
+                                        style="max-width:100%;height:auto;display:block;pointer-events:none;">
                                     </video>
                                 </a>
                                 <div class="inner">
                                     <h4>ArcGIS Picture Marker Symbol</a></h4>
-                                    <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro. <a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a></p>
+                                    <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
+                                    <p><a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a></p>
                                 </div>
                             </article> <!-- End ArcGIS Picture Marker Symbol -->
                             
