remove pointer-events from video element for improved interaction

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                     <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4"
                                         alt="ArcGIS Picture Marker Symbol"
                                         controls class="video-responsive" width="937" height="621"
-                                        style="max-width:100%;height:auto;display:block;pointer-events:none;">
+                                        style="display:block;">
                                     </video>
                                 </a>
                                 <div class="inner">
