add video-link class for improved accessibility and structure of video elements

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
                             
                             <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
-                                <a href="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" target="_blank" title="ArcGIS Picture Marker Symbol video" style="display:block;">
+                                <a href="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" target="_blank" title="ArcGIS Picture Marker Symbol video" class="video-link">
                                     <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4"
                                         alt="ArcGIS Picture Marker Symbol"
-                                        controls class="video-responsive" width="937" height="621"
-                                        style="display:block;">
+                                        controls class="video-responsive"
+                                        width="937" height="621">
                                     </video>
                                 </a>
                                 <div class="inner">
