refactor section headers for Musical Birthday Quest and ArcGIS Picture Marker Symbol for improved clarity

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                     <img src="/portfolio/images/musicalbirthdayquest.jpg" alt="Musical Birthday Quest"/>
                                 </a>
                                 <div class="inner">
-                                    <h4><a href="https://sabank.github.io/MusicalBirthdayQuest/" target="_blank">Musical Birthday Quest</a></h4>
+                                    <h4>Musical Birthday Quest</h4>
                                     <p>Combines interactive gameplay with music knowledge for a unique and engaging experience.</p>
                                     <p><a href="https://github.com/sabank/MusicalBirthdayQuest" target="_blank">GitHub repo</a></p>
                                 </div>
@@ -115,7 +115,7 @@
                                     </video>
                                 </a>
                                 <div class="inner">
-                                    <h4>ArcGIS Picture Marker Symbol</a></h4>
+                                    <h4>ArcGIS Picture Marker Symbol</h4>
                                     <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
                                     <p><a href="https://community.esri.com/t5/python-blog/working-example-apply-uniquevaluerenderer-with/ba-p/1618515" target="_blank">Blog article</a></p>
                                 </div>
