refactor video link class for ArcGIS Picture Marker Symbol for improved structure and accessibility

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             
                             <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
-                                <a href="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" target="_blank" title="ArcGIS Picture Marker Symbol video" class="video-link">
+                                <a href="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" class="image" target="_blank" title="ArcGIS Picture Marker Symbol video" >
                                     <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4"
                                         alt="ArcGIS Picture Marker Symbol"
                                         controls class="video-responsive"
