--- a/index.html
+++ b/index.html
@@ -110,8 +110,9 @@
                                 <a href="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" class="image" target="_blank" title="ArcGIS Picture Marker Symbol video" >
                                     <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4"
                                         alt="ArcGIS Picture Marker Symbol"
-                                        controls class="video-responsive"
-                                        width="937" height="621">
+                                        class="video-responsive"
+                                        width="937" height="621"
+                                        autoplay loop muted playsinline>
                                     </video>
                                 </a>
                                 <div class="inner">
