fix: replace video element with image for ArcGIS Picture Marker Symbol and retain autoplay attributes

--- a/index.html
+++ b/index.html
@@ -108,11 +108,10 @@
                             <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
                                 <a href="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" class="image" target="_blank" title="ArcGIS Picture Marker Symbol video" >
-                                    <video src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4"
+                                    <img src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4"
                                         alt="ArcGIS Picture Marker Symbol"
                                         width="937" height="621"
-                                        autoplay loop muted playsinline>
-                                    </video>
+                                        autoplay loop muted playsinline/>
                                 </a>
                                 <div class="inner">
                                     <h4>ArcGIS Picture Marker Symbol</h4>
