fix: replace anchor with video element for ArcGIS Picture Marker Symbol demonstration

--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
                             
                             <!-- ArcGIS Picture Marker Symbol accomplishment -->
                             <article>
-                                <a href="#" class="image" target="_blank" title="Click Me">
-                                    <img src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" alt="ArcGIS Picture Marker Symbol"/>
-                                </a>
+                                <video class="image" width="937" height="621" autoplay loop muted playsinline style="max-width:100%;height:auto;" title="ArcGIS Picture Marker Symbol">
+                                    <source src="/portfolio/images/uniqueValueRenderer_automation_demo.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
                                 <div class="inner">
                                     <h4>ArcGIS Picture Marker Symbol</h4>
                                     <p>Demonstrates how to programmatically apply unique picture marker symbols to a feature layer using ArcPy in ArcGIS Pro.</p>
