fix: update skills and accomplishments descriptions for clarity and relevance

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                 <section id="two">
                     <div class="container">
                         <h3>Things I Can Do</h3>
-                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+                        <p>Combining geospatial insight with software development, I build solutions that automate workflows, enhance decision-making, and solve real-world problems rooted in geography and data.</p>
                         <ul class="feature-icons">
-                            <li class="icon solid fa-code">Write all the code</li>
-                            <li class="icon solid fa-cubes">Stack small boxes</li>
-                            <li class="icon solid fa-book">Read books and stuff</li>
-                            <li class="icon solid fa-coffee">Drink much coffee</li>
-                            <li class="icon solid fa-bolt">Lightning bolt</li>
-                            <li class="icon solid fa-users">Shadow clone technique</li>
+                            <li class="icon solid fa-code">Develop full-stack GIS applications</li>
+                            <li class="icon solid fa-map">Design spatial data models and maps</li>
+                            <li class="icon solid fa-robot">Automate geospatial workflows with AI</li>
+                            <li class="icon solid fa-database">Manage and analyze spatial databases</li>
+                            <li class="icon solid fa-chart-line">Visualize data for strategic insights</li>
+                            <li class="icon solid fa-globe">Deliver location-based solutions at scale</li>
                         </ul>
                     </div>
                 </section> <!-- End Two -->
@@ -91,7 +91,7 @@
                 <section id="three">
                     <div class="container">
                         <h3>A Few Accomplishments</h3>
-                        <p>Here are a few highlights from my journey in GIS, Data Science, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
+                        <p>Here are a few highlights from my journey in GIS, Data Science, Generative AI, and creative web development. Each project reflects my passion for solving problems and building engaging digital experiences.</p>
                         <div class="features">
                             <!-- Musical Birthday Quest accomplishment -->
                             <article>
