fix: update skills descriptions for clarity and conciseness

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                         <h3>Things I Can Do</h3>
                         <p>Combining geospatial insight with software development, I build solutions that automate workflows, enhance decision-making, and solve real-world problems rooted in geography and data.</p>
                         <ul class="feature-icons">
-                            <li class="icon solid fa-code">Develop full-stack GIS applications</li>
-                            <li class="icon solid fa-map">Design spatial data models and maps</li>
-                            <li class="icon solid fa-robot">Automate geospatial workflows with AI</li>
-                            <li class="icon solid fa-database">Manage and analyze spatial databases</li>
+                            <li class="icon solid fa-code">Develop full-stack applications</li>
+                            <li class="icon solid fa-map">Design data models and maps</li>
+                            <li class="icon solid fa-robot">Automate workflows with AI</li>
+                            <li class="icon solid fa-database">Manage and analyze databases</li>
                             <li class="icon solid fa-chart-line">Visualize data for strategic insights</li>
                             <li class="icon solid fa-globe">Deliver location-based solutions at scale</li>
                         </ul>
