--- a/index.html
+++ b/index.html
@@ -134,17 +134,17 @@
                 <section id="four">
                     <div class="container">
                         <h3>Contact Me</h3>
-                        <p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+                        <p>Have a project in mind, a question about geospatial tech, or just want to connect? Feel free to reach out using the form below — I would love to hear from you.</p>
                         <form method="post" action="#">
                             <div class="row gtr-uniform">
-                                <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-                                <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
+                                <div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Your Name" /></div>
+                                <div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Your Email" /></div>
                                 <div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-                                <div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
+                                <div class="col-12"><textarea name="message" id="message" placeholder="Your Message" rows="6"></textarea></div>
                                 <div class="col-12">
                                     <ul class="actions">
                                         <li><input type="submit" class="primary" value="Send Message" /></li>
-                                        <li><input type="reset" value="Reset Form" /></li>
+                                        <li><input type="reset" value="Clear Form" /></li>
                                     </ul>
                                 </div>
                             </div>
